syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

service HookedKey{
	rpc SendHookedKey (HookedKeySendModel) returns (HookedKeyResponseModel);
}

message HookedKeySendModel{
	int32 keyCode = 1;
}

message HookedKeyResponseModel{
	bool isReceived = 1;
}